objects/tffa__FundingMatrix__c.object
<CustomObject>
    <description>Configuration to maintain allowed funding types and funding amount ranges for products (or categories).
Each record is a rule consisting of facts - channel, product, productCategory, etc and outcomes - fundingType, funding amount ranges.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>Allowed channels for the funding type. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InternalTransferAllowNewAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, applications in current submission can be used as source accounts for internal transfer. The applications are filtered by the product categories specified in InternalTransferAllowedAccountCategory.</description>
        <inlineHelpText>If true, applications in current submission can be used as source accounts for internal transfer. The applications are filtered by the product categories specified in Internal Transfer Allowed Account Category.</inlineHelpText>
        <label>Internal transfer allow new accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__InternalTransferAllowedAccountCategory__c</fullName>
        <description>List of allowed product categories (semicolon separated) for source accounts available for internal transfer.</description>
        <inlineHelpText>List of allowed product categories (semicolon separated) for source accounts available for internal transfer.</inlineHelpText>
        <label>Internal Xfer allowed account category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if current funding request is captured remotely. A fact.</description>
        <label>Is remote funding captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxAmount__c</fullName>
        <description>The upper bound on the funding amount for the given funding type.</description>
        <label>Max amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MinAmount__c</fullName>
        <description>The lower bound on the funding amount for the given funding type.</description>
        <label>Min amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the party (primary applicant in the application) in the bank - CUSTOMER, PROSPECT. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>Allowed product categories for the funding type. A fact.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Allowed product for the funding type. A fact.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Funding Matrices</relationshipLabel>
        <relationshipName>FundingMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <description>Captures purpose of the Funding. Used as a Fact.</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of funding.</description>
        <label>Type (outcome)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingType</valueSetName>
        </valueSet>
    </fields>
    <label>Funding Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__ChannelSet__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__DepositFunding</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__ChannelSet__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>DEPOSIT</value>
        </filters>
        <label>Deposit Funding</label>
    </listViews>
    <listViews>
        <fullName>tffa__Disbursement</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>DISBURSEMENT</value>
        </filters>
        <label>Disbursement Instruction</label>
    </listViews>
    <listViews>
        <fullName>tffa__Repayment</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>REPAYMENT</value>
        </filters>
        <label>Automatic Payment</label>
    </listViews>
    <nameField>
        <displayFormat>FM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>